--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the users controller here.
+// Place all the styles related to the relations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+* {
+    padding: 0;
+    margin: 0;
+  }
+.chan {
+    z-index: 10;
+    background: #fff;
+    margin-top: 120px;
+    margin-bottom: 30px;
+    margin-left: 300px;
+}
