--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,34 +1,43 @@
-<h3>一覧ページ</h3>
-<h3>投稿を検索</h3>
- <%= form_tag({controller:"books",action:"index"}, method: :get) do %>
-   <%= text_field_tag :search %>
-   <%= submit_tag '検索する'  %>
-<% end %>
-<%= link_to "新規投稿へ", new_book_path %>
-<% if user_signed_in? %>
-  <%= link_to "マイページへ", user_path(current_user.id) %>
-<% end %>
-<p>
-<%= link_to "人生論・教訓", "books/life" %>
-<%= link_to "自己啓発", "books/self" %>
-<%= link_to "仕事術・整理法", "books/work" %>
-<%= link_to "心理学", "books/psychology" %>
-<%= link_to "思想", "books/thought" %>
-<%= link_to "ビジネスライフ", "books/business" %>
+<%= stylesheet_link_tag "books", :media => "all" %>
 <div class="pagination pagination-sm justify-content-center">
-<div class="books-container">
+ <div class="books-container">
  <% @books.each do |t| %>
-    <div class="book">
-    <%= link_to t.user.name, user_path(t.user.id) %>
-    <%= image_tag t.user.image_url, size: "250x200" if t.user.image? %>
-    <%= t.user.email %>
-      <%= t.namer %>
-      <%= t.author %>
-      <%= t.year %>
-      <%= t.company %>
-      <%= t.category %>
-      <%= t.learn %>
-      <%= t.practice %>
+  <div class="book">
+    <li class="right_cont-inner">
+    <h12><%= link_to t.user.name, user_path(t.user.id) %></h12>
+    <h13><%= image_tag t.user.image_url, size: "250x200" if t.user.image? %></h13>
+    
+    <p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">本のタイトル</p><h14><%= t.namer %></h14>
+
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">著者</p><h15><%= t.author %></h15>
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">ジャンル</p><h16><%= t.category %></h16>
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">学んだこと</p><h17><%= t.learn %></h17>
+    </li>
+  
     
   <% if user_signed_in? %>
       <% if current_user.already_liked?(t) %>
@@ -40,15 +49,17 @@
             <i class="fa-regular fa-heart"></i><%= t.likes.count %>
           <% end %>
       <% end %>
+
   <% else %>
   <i class="fa-solid fa-heart"></i><%= t.likes.count %>
   <% end %>
-      <%= t.created_at %>
-    <%= link_to "詳細へ", book_path(t.id) %>
-    <%= link_to "編集する", edit_book_path(t.id) %> 
-    <%= button_to "削除する", book_path(t.id), method: :delete %>
+  <h18><%= t.created_at.strftime('%Y/%m/%d') %></h18>
+  <h19><%= link_to "詳細へ", book_path(t.id) %></h19>
+  <h20><%= link_to "編集する", edit_book_path(t.id) %></h20> 
+  <h21><%= button_to "削除する", book_path(t.id), method: :delete %></h21>
     </div>
   <% end %>
-</div>
+ </div>
+ </div>
 <%= paginate @books %>
 </div>
