--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,56 @@
 <h1>OUTBOOK</h1>
 <h3>投稿詳細</h3>
+<div class="books-show">
 <div class="book">
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">本のタイトル</p>
   <p><%= @book.namer %></p>
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">著者</p>
   <p><%= @book.author %></p>
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">出版年</p>
   <p><%= @book.year %></p>
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">出版社</p>
   <p><%= @book.company %></p>
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">学んだこと</p>
   <p><%= @book.learn %></p>
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">実践すること</p>
   <p><%= @book.practice %></p>
-  <p><%= @book.created_at %></p>
+  <p><%= @book.created_at.strftime('%Y/%m/%d')  %></p>
 
   <% if user_signed_in? %>
       <% if current_user.already_liked?(@book) %>
@@ -49,5 +92,4 @@
     <% end %>
   <% end %>
 </div>
-
-<%= link_to "投稿一覧に戻る", books_path %>
+</div>
