--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,4 +1,6 @@
-<h2>Change your password</h2>
+<%= stylesheet_link_tag "users", :media => "all" %>
+<div class="chan">
+<h2>パスワードを変更する</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
@@ -23,3 +25,4 @@
 <% end %>
 
 <%= render "users/shared/links" %>
+</div>
