--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,22 @@
-<h1>users#show</h1>
-<p>名前 : <%= @user.name %></p>
-<p>メールアドレス : <%= @user.email %></p>
+<%= stylesheet_link_tag "mypage", :media => "all" %>
+<div class="books-container">
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">名前</p>
+<p><%= @user.name %></p>
 <%= image_tag @user.image_url, size: "250x200" if @user.image? %>
-<p>プロフィール : <%= @user.profile %></p>
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">プロフィール</p>
+<p><%= @user.profile %></p>
 
 <% if current_user.id == @user.id %>
   <%= link_to "編集する", edit_user_registration_path %>
@@ -13,29 +27,133 @@
 
 
 <h2>ユーザーの投稿一覧</h2>
+
 <% @user.books.each do |t| %>
+  <div class="book">
+<li class="right_cont-inner">
   <%= t.user.name %>
-      <%= t.namer %>
-      <%= t.author %>
-      <%= t.year %>
-      <%= t.company %>
-      <%= t.category %>
-      <%= t.learn %>
-      <%= t.practice %>
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">本のタイトル</p><%= t.namer %>
+
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">著者名</p><%= t.author %>
+
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">出版年</p><%= t.year %>
+
+  <p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">出版社</p><%= t.company %>
+
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">ジャンル</p><%= t.category %>
+
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">学んだこと</p><%= t.learn %>
+
+<p style="font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 48px;
+
+color: #000000;">実践すること</p><%= t.practice %>
 <% end %>
+</li>
+</div>
 
 <!-- 以下はいいね機能を実装している場合-->
 <h2>ユーザーがいいねした投稿一覧</h2>
 <% @user.liked_books.each do |t| %>
-  <%= t.user.name %>
-      <%= t.namer %>
-      <%= t.author %>
-      <%= t.year %>
-      <%= t.company %>
-      <%= t.category %>
-      <%= t.learn %>
-      <%= t.practice %>
-<% end %>
+  <div class="book">
+  <li class="right_cont-inner">
+    <%= t.user.name %>
+    <p style="font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 48px;
+    
+    color: #000000;">本のタイトル</p><%= t.namer %>
+  
+    <p style="font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 48px;
+    
+    color: #000000;">著者名</p><%= t.author %>
+  
+    <p style="font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 48px;
+    
+    color: #000000;">出版年</p><%= t.year %>
+  
+    <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">出版社</p><%= t.company %>
+  
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">ジャンル</p><%= t.category %>
+  
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">学んだこと</p><%= t.learn %>
+  
+  <p style="font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 48px;
+  
+  color: #000000;">実践すること</p><%= t.practice %>
+  <% end %>
+  </li>
+  </div>
 <!-- ここまで-->
-
-<%= link_to "投稿一覧に戻る", books_path %>
+</div>
