自由にわかりやすいメッセージ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <header>
   <h1>Outbook</h1>
 
-  <% if user_signed_in? %><form action="https://outbook.onrender.com/books" method="get">
+  <% if user_signed_in? %><form action="https://outbook.onrender.com" method="get">
   <input id="sbox1"  id="s" name="s" type="text" placeholder="サイト内を検索" />
   </form><% end %>
  
