--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -70,13 +70,13 @@ color: #000000;">本のタイトル</p>
 
 <h2>いいねしたユーザー</h2>
 <% @book.liked_users.each do |user| %>
-  <li><%= user.email %></li>
+  <li><%= user.name %></li>
 <% end %>
 <div class="comment-wrapper">
   <p>コメント一覧</p>
   <% @comments.each do |c| %>
     <div>
-      <%= c.user.email unless c.user.blank? %>
+      <%= c.user.name unless c.user.blank? %>
       <br>
       <%= c.content %>
     </div>
